<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_bg"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dip" >

        <TextView
            style="@style/tv_label"
            android:layout_marginBottom="3dip"
            android:text="@string/lbl_username" />

        <EditText
            android:id="@+id/et_username"
            style="@style/edit_text"
            android:layout_marginBottom="10dip"
            android:hint="@string/lbl_username"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/tv_label"
            android:layout_marginBottom="3dip"
            android:text="@string/lbl_password" />

        <EditText
            android:id="@+id/et_password"
            style="@style/edit_text"
            android:layout_marginBottom="10dip"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:longClickable="false" />

        <CheckBox
            android:id="@+id/cb_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/label"
            android:text="@string/lbl_remember_password" />

        <Button
            android:id="@+id/btn_login"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/btn_gray_selector"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_register"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/btn_gray_selector"
            android:text="@string/btn_register" />
    </LinearLayout>

</ScrollView>